--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,15 +77,15 @@
    "source": [
     "#Read historical data\n",
     "#Read scale 3\n",
-    "df = pd.read_csv(f'{os.getcwd()}/result/historical_load_Scale3_KNAF2D.csv')\n",
+    "df = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale3_KNAF2D.csv')\n",
     "df['scale'] = 3\n",
     "df.head()\n",
     "#Read scale 6\n",
-    "df2 = pd.read_csv(f'{os.getcwd()}/result/historical_load_Scale6_KNAF2D.csv')\n",
+    "df2 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale6_KNAF2D.csv')\n",
     "df2['scale'] = 6\n",
     "df2.head()\n",
     "#Read scale 9\n",
-    "df3 = pd.read_csv(f'{os.getcwd()}/result/historical_load_Scale9_KNAF2D.csv')\n",
+    "df3 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale9_KNAF2D.csv')\n",
     "df3['scale'] = 9\n",
     "df3.head()\n"
    ]
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,13 +205,13 @@
     "#Insert title\n",
     "plt.title('Create Database on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/historical_load.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/historical_load.png')\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +238,13 @@
     "#Insert title\n",
     "plt.title('Elapsed time on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/historical_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/historical_elapsed_time.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +271,13 @@
     "#Insert title\n",
     "plt.title('No. of Rows on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/historical_rows.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/historical_rows.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,13 +304,13 @@
     "#Insert title\n",
     "plt.title('Throughput on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/historical_throughput.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/historical_throughput.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -367,15 +367,15 @@
    "source": [
     "#Read incermental data\n",
     "#Read scale 3\n",
-    "df4 = pd.read_csv(f'{os.getcwd()}/result/incremental_load_Scale3_KNAF2D.csv')\n",
+    "df4 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale3_KNAF2D.csv')\n",
     "df4['scale'] = 3\n",
     "df4.head()\n",
     "#Read scale 6\n",
-    "df5 = pd.read_csv(f'{os.getcwd()}/result/incremental_load_Scale6_KNAF2D.csv')\n",
+    "df5 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale6_KNAF2D.csv')\n",
     "df5['scale'] = 6\n",
     "df5.head()\n",
     "#Read scale 9\n",
-    "df6 = pd.read_csv(f'{os.getcwd()}/result/incremental_load_Scale9_KNAF2D.csv')\n",
+    "df6 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale9_KNAF2D.csv')\n",
     "df6['scale'] = 9\n",
     "df6.head()"
    ]
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,13 +491,13 @@
     "#Insert title\n",
     "plt.title('Elapsed time on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/incremental_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/incremental_elapsed_time.png')\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -524,13 +524,13 @@
     "#Insert title\n",
     "plt.title('No. of Rows on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/incremental_rows.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/incremental_rows.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,13 +557,13 @@
     "#Insert title\n",
     "plt.title('Throughput on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/incremental_throughput.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/incremental_throughput.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -616,15 +616,15 @@
    "source": [
     "#Read overall data\n",
     "#Read scale 3\n",
-    "df7 = pd.read_csv(f'{os.getcwd()}/result/overall_stats_Scale3_KNAF2D.csv')\n",
+    "df7 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale3_KNAF2D.csv')\n",
     "df7['scale'] = 3\n",
     "df7.head()\n",
     "#Read scale 6\n",
-    "df8 = pd.read_csv(f'{os.getcwd()}/result/overall_stats_Scale6_KNAF2D.csv')\n",
+    "df8 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale6_KNAF2D.csv')\n",
     "df8['scale'] = 6\n",
     "df8.head()\n",
     "#Read scale 9\n",
-    "df9 = pd.read_csv(f'{os.getcwd()}/result/overall_stats_Scale9_KNAF2D.csv')\n",
+    "df9 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale9_KNAF2D.csv')\n",
     "df9['scale'] = 9\n",
     "df9.head()\n"
    ]
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -732,13 +732,13 @@
     "#Insert title\n",
     "plt.title('Overall performance')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/overall_TPC_DI_RPS.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/overall_TPC_DI_RPS.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
     }
    ],
    "source": [
-    "#Concatenate dataframes for all the results\n",
+    "#Concatenate dataframes for all the results/datas\n",
     "df = pd.concat([df4], axis=0)\n",
     "#remove dubplicates\n",
     "df = df.drop_duplicates()\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
     }
    ],
    "source": [
-    "#comapre the results of historical and incremental load\n",
+    "#comapre the results/datas of historical and incremental load\n",
     "df['Type'] = 'Historical'\n",
     "df4['Type'] = 'Incremental'\n",
     "df = pd.concat([df, df4], axis=0)\n",
@@ -849,7 +849,7 @@
     "for p in ax.patches:\n",
     "    ax.annotate(format(p.get_height(), '.2f'), (p.get_x() + p.get_width() / 2., p.get_height()), ha = 'center', va = 'center', xytext = (0, 6), textcoords = 'offset points')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/result/historical_incremental_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/data/historical_incremental_elapsed_time.png')\n",
     "plt.show()\n",
     "\n"
    ]
