--- a/Graphs.ipynb
+++ b/Graphs.ipynb
@@ -80,19 +80,26 @@
     "df = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale3_KNAF2D.csv')\n",
     "df['scale'] = 3\n",
     "df.head()\n",
-    "#Read scale 6\n",
-    "df2 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale6_KNAF2D.csv')\n",
-    "df2['scale'] = 6\n",
+    "\n",
+    "#Read scale 4\n",
+    "df2 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale4_KNAF2D.csv')\n",
+    "df2['scale'] = 4\n",
     "df2.head()\n",
-    "#Read scale 9\n",
-    "df3 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale9_KNAF2D.csv')\n",
-    "df3['scale'] = 9\n",
-    "df3.head()\n"
+    "\n",
+    "#Read scale 5\n",
+    "df3 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale5_KNAF2D.csv')\n",
+    "df3['scale'] = 5\n",
+    "df3.head()\n",
+    "\n",
+    "#Read scale 6\n",
+    "df4 = pd.read_csv(f'{os.getcwd()}/results/data/historical_load_Scale6_KNAF2D.csv')\n",
+    "df4['scale'] = 6\n",
+    "df4.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +177,7 @@
    ],
    "source": [
     "#Merge dataframes for historical load\n",
-    "df = pd.concat([df, df2, df3], axis=0)\n",
+    "df = pd.concat([df, df2, df3, df4], axis=0)\n",
     "#remove dubplicates\n",
     "df = df.drop_duplicates()\n",
     "df.head()"
@@ -205,7 +212,7 @@
     "#Insert title\n",
     "plt.title('Create Database on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/historical_load.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/historical_load.png')\n",
     "plt.show()\n"
    ]
   },
@@ -238,7 +245,7 @@
     "#Insert title\n",
     "plt.title('Elapsed time on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/historical_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/historical_elapsed_time.png')\n",
     "plt.show()"
    ]
   },
@@ -271,7 +278,7 @@
     "#Insert title\n",
     "plt.title('No. of Rows on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/historical_rows.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/historical_rows.png')\n",
     "plt.show()"
    ]
   },
@@ -304,7 +311,7 @@
     "#Insert title\n",
     "plt.title('Throughput on Historical Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/historical_throughput.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/historical_throughput.png')\n",
     "plt.show()"
    ]
   },
@@ -370,19 +377,26 @@
     "df4 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale3_KNAF2D.csv')\n",
     "df4['scale'] = 3\n",
     "df4.head()\n",
-    "#Read scale 6\n",
-    "df5 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale6_KNAF2D.csv')\n",
-    "df5['scale'] = 6\n",
+    "\n",
+    "#Read scale 4\n",
+    "df5 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale4_KNAF2D.csv')\n",
+    "df5['scale'] = 4\n",
     "df5.head()\n",
-    "#Read scale 9\n",
-    "df6 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale9_KNAF2D.csv')\n",
-    "df6['scale'] = 9\n",
-    "df6.head()"
+    "\n",
+    "#Read scale 5\n",
+    "df6 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale5_KNAF2D.csv')\n",
+    "df6['scale'] = 5\n",
+    "df6.head()\n",
+    "\n",
+    "#Read scale 6\n",
+    "df7 = pd.read_csv(f'{os.getcwd()}/results/data/incremental_load_Scale6_KNAF2D.csv')\n",
+    "df7['scale'] = 6\n",
+    "df7.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +470,7 @@
    ],
    "source": [
     "#concatenate dataframes for incremental load\n",
-    "df4 = pd.concat([df4, df5, df6], axis=0)\n",
+    "df4 = pd.concat([df4, df5, df6, df7], axis=0)\n",
     "#remove dubplicates\n",
     "df4 = df4.drop_duplicates()\n",
     "df4.head()"
@@ -491,7 +505,7 @@
     "#Insert title\n",
     "plt.title('Elapsed time on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/incremental_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/incremental_elapsed_time.png')\n",
     "plt.show()\n"
    ]
   },
@@ -524,7 +538,7 @@
     "#Insert title\n",
     "plt.title('No. of Rows on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/incremental_rows.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/incremental_rows.png')\n",
     "plt.show()"
    ]
   },
@@ -557,7 +571,7 @@
     "#Insert title\n",
     "plt.title('Throughput on Incremental Load')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/incremental_throughput.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/incremental_throughput.png')\n",
     "plt.show()"
    ]
   },
@@ -619,19 +633,23 @@
     "df7 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale3_KNAF2D.csv')\n",
     "df7['scale'] = 3\n",
     "df7.head()\n",
-    "#Read scale 6\n",
-    "df8 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale6_KNAF2D.csv')\n",
-    "df8['scale'] = 6\n",
+    "#Read scale 4\n",
+    "df8 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale4_KNAF2D.csv')\n",
+    "df8['scale'] = 4\n",
     "df8.head()\n",
-    "#Read scale 9\n",
-    "df9 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale9_KNAF2D.csv')\n",
-    "df9['scale'] = 9\n",
-    "df9.head()\n"
+    "#Read scale 5\n",
+    "df9 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale5_KNAF2D.csv')\n",
+    "df9['scale'] = 5\n",
+    "df9.head()\n",
+    "#Read scale 6\n",
+    "df10 = pd.read_csv(f'{os.getcwd()}/results/data/overall_stats_Scale6_KNAF2D.csv')\n",
+    "df10['scale'] = 6\n",
+    "df10.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +715,7 @@
    ],
    "source": [
     "#concatenate dataframes for overall stats\n",
-    "df7 = pd.concat([df7, df8, df9], axis=0)\n",
+    "df7 = pd.concat([df7, df8, df9, df10], axis=0)\n",
     "#remove dubplicates\n",
     "df7 = df7.drop_duplicates()\n",
     "df7.head()"
@@ -732,7 +750,7 @@
     "#Insert title\n",
     "plt.title('Overall performance')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/overall_TPC_DI_RPS.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/overall_TPC_DI_RPS.png')\n",
     "plt.show()"
    ]
   },
@@ -849,7 +867,7 @@
     "for p in ax.patches:\n",
     "    ax.annotate(format(p.get_height(), '.2f'), (p.get_x() + p.get_width() / 2., p.get_height()), ha = 'center', va = 'center', xytext = (0, 6), textcoords = 'offset points')\n",
     "#save the graph\n",
-    "plt.savefig(f'{os.getcwd()}/results/data/historical_incremental_elapsed_time.png')\n",
+    "plt.savefig(f'{os.getcwd()}/results/charts/historical_incremental_elapsed_time.png')\n",
     "plt.show()\n",
     "\n"
    ]
