--- a/Visualizations_TPCDI.ipynb
+++ b/Visualizations_TPCDI.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "def get_visualization_all(path_general=\".\",data_sizes = [\"Scale3\",\"Scale4\",\"Scale5\", \"Scale6\"], folder=\"\"):\n",
+    "def get_visualization_all(path_general=\"results/data\",data_sizes = [\"Scale3\",\"Scale4\",\"Scale5\", \"Scale6\"], folder=\"\"):\n",
     "    dfs = []\n",
     "    for i, data_size in enumerate(data_sizes):\n",
     "        stats_path = path_general+ \"/{folder}_{size}_KNAF2D.csv\".format(folder=folder, size=data_size)\n",
@@ -40,9 +40,6 @@
     "    df_all_historical = get_visualization_all(folder_base,data_sizes,\"historical_load\")\n",
     "    df_all_incremental = get_visualization_all(folder_base,data_sizes,\"incremental_load\")\n",
     "    c = '#7eb54e'\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "    for k in [\"create_db_time\",\"et\",\"rows\",\"throughput\"]:\n",
     "        df_all_plt_historical =df_all_historical.pivot_table(\n",
