update tpcdi script

--- a/TPC-DI-notebook.ipynb
+++ b/TPC-DI-notebook.ipynb
@@ -13,15 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import threading\n",
     "import findspark\n",
     "from src.visibilities_queries import tpcdi_visibility_q1, tpcdi_visibility_q2\n",
@@ -59,6 +50,28 @@
     "    .appName(\"VisibilityQuerySession\") \\\n",
     "    .config(\"spark.sql.shuffle.partitions\", \"1\") \\\n",
     "    .getOrCreate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from builtins import min\n",
+    "num = [1, 2]\n",
+    "builtins.min(num)"
    ]
   },
   {
