--- a/Visualizations_TPCDI.ipynb
+++ b/Visualizations_TPCDI.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,41 +20,92 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "def get_visualization_all(path_general=\"results/data\",data_sizes = [\"Scale3\",\"Scale4\",\"Scale5\", \"Scale6\"], folder=\"\"):\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def get_visualization_all(path_general=\"results/data\", data_sizes=None, file_types=None):\n",
+    "    if data_sizes is None:\n",
+    "        data_sizes = [\"Scale3\"]#, \"Scale4\", \"Scale5\", \"Scale6\"]\n",
+    "    if file_types is None:\n",
+    "        file_types = [\"historical_load\", \"incremental_load_1\", \"incremental_load_2\", \"overall_stats\"]\n",
+    "\n",
+    "    if type(file_types) == str:\n",
+    "        file_types = [file_types]\n",
+    "\n",
+    "    most_recent_files = []\n",
+    "    for file_type in file_types:\n",
+    "        for data_size in data_sizes:\n",
+    "            # Construct a search pattern for the desired file type and scale\n",
+    "            pattern = f\"{file_type}_{data_size}\"\n",
+    "\n",
+    "            # Find all matching files in the directory\n",
+    "            matching_files = [\n",
+    "                os.path.join(path_general, f) for f in os.listdir(path_general)\n",
+    "                if pattern in f\n",
+    "            ]\n",
+    "            if matching_files:\n",
+    "                # Sort matching files by modification time (most recent first)\n",
+    "                matching_files.sort(key=lambda x: os.path.getmtime(x), reverse=True)\n",
+    "\n",
+    "                # Take the most recent file\n",
+    "                most_recent_file = matching_files[0]\n",
+    "                most_recent_files.append(most_recent_file)\n",
+    "\n",
+    "    # Load and concatenate the most recent files into a single DataFrame\n",
     "    dfs = []\n",
-    "    for i, data_size in enumerate(data_sizes):\n",
-    "        stats_path = path_general+ \"/{folder}_{size}_KNAF2D.csv\".format(folder=folder, size=data_size)\n",
-    "        df = pd.read_csv(stats_path)\n",
-    "        df['scale'] = data_size\n",
+    "    for file_path in most_recent_files:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "\n",
+    "        # Extract metadata from the filename\n",
+    "        file_name = os.path.basename(file_path)\n",
+    "        for file_type in file_types:\n",
+    "            if file_type in file_name:\n",
+    "                df['file_type'] = file_type\n",
+    "                break\n",
+    "        for data_size in data_sizes:\n",
+    "            if data_size in file_name:\n",
+    "                df['scale'] = data_size\n",
+    "                break\n",
+    "\n",
+    "        df['file_name'] = file_name\n",
+    "        df['last_modified'] = datetime.fromtimestamp(os.path.getmtime(file_path)).strftime('%Y-%m-%d %H:%M:%S')\n",
     "        dfs.append(df)\n",
     "\n",
-    "    df_final=pd.concat(dfs, ignore_index=True)\n",
-    "\n",
+    "    df_final = pd.concat(dfs, ignore_index=True) if dfs else pd.DataFrame()\n",
     "    return df_final\n",
     "\n",
-    "def create_mail_images(data_sizes = [\"Scale3\",\"Scale4\",\"Scale5\", \"Scale6\"]):\n",
-    "    folder_base=f\"{os.getcwd()}/result\"\n",
+    "\n",
+    "def create_mail_images(data_sizes = [\"Scale3\",\"Scale4\",\"Scale5\",\"Scale6\"]):\n",
+    "    folder_base=f\"{os.getcwd()}/results/data\"\n",
     "    temp_folder_img=f\"{os.getcwd()}/images/\"\n",
     "\n",
-    "    df_all_overal = get_visualization_all(folder_base,data_sizes,\"overall_stats\")\n",
-    "    df_all_historical = get_visualization_all(folder_base,data_sizes,\"historical_load\")\n",
-    "    df_all_incremental = get_visualization_all(folder_base,data_sizes,\"incremental_load\")\n",
+    "    df_all_overal = get_visualization_all(folder_base,data_sizes, file_types=\"overall_stats\")\n",
+    "    df_all_historical = get_visualization_all(folder_base,data_sizes, file_types=\"historical_load\")\n",
+    "    df_all_incremental_1 = get_visualization_all(folder_base,data_sizes, file_types=\"incremental_load_1\")\n",
+    "    df_all_incremental_2 = get_visualization_all(folder_base,data_sizes, file_types=\"incremental_load_2\")\n",
     "    c = '#7eb54e'\n",
     "\n",
     "    for k in [\"create_db_time\",\"et\",\"rows\",\"throughput\"]:\n",
     "        df_all_plt_historical =df_all_historical.pivot_table(\n",
-    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Historical {k}\",color = c)\n",
+    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Historical Load - {k} vs Scale Factor\")\n",
     "        df_all_plt_historical.figure.savefig(temp_folder_img+f\"historical_stats_{k}.png\")\n",
     "\n",
     "    for k in [\"et\",\"rows\",\"throughput\"]:\n",
-    "        df_all_plt_incremental =df_all_incremental.pivot_table(\n",
-    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Incremental {k}\",color = c)\n",
-    "        df_all_plt_incremental.figure.savefig(temp_folder_img+f\"incremental_stats_{k}.png\")\n",
+    "        df_all_plt_incremental =df_all_incremental_1.pivot_table(\n",
+    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Incremental Load 1 - {k} vs Scale Factor\")\n",
+    "        df_all_plt_incremental.figure.savefig(temp_folder_img+f\"incremental_1_stats_{k}.png\")\n",
+    "\n",
+    "    for k in [\"et\",\"rows\",\"throughput\"]:\n",
+    "        df_all_plt_incremental =df_all_incremental_2.pivot_table(\n",
+    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Incremental Load 2 - {k} vs Scale Factor\")\n",
+    "        df_all_plt_incremental.figure.savefig(temp_folder_img+f\"incremental_2_stats_{k}.png\")\n",
     "\n",
     "    df_all_historical[\"Type\"]=\"Historical\"\n",
-    "    df_all_incremental[\"Type\"]=\"Incremental\"\n",
+    "    df_all_incremental_1[\"Type\"]=\"Incremental 1\"\n",
+    "    df_all_incremental_2[\"Type\"]=\"Incremental 2\"\n",
     "\n",
-    "    df_all_incremental_historical =pd.concat([df_all_historical,df_all_incremental], ignore_index=True)\n",
+    "    df_all_incremental_historical =pd.concat([df_all_historical, df_all_incremental_1, df_all_incremental_2], ignore_index=True)\n",
     "    for k in [\"et\",\"rows\",\"throughput\"]:\n",
     "        df_all_plt_incremental_historical =df_all_incremental_historical.pivot_table(\n",
     "            index='scale',columns=\"Type\", values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Comparison incremental and historical {k}\")\n",
@@ -62,7 +113,7 @@
     "\n",
     "    for k in [\"TPC_DI_RPS\"]:\n",
     "        df_all_plt_overal =df_all_overal.pivot_table(\n",
-    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Overall {k}\",color = c)\n",
+    "            index='scale', values=k).plot(kind='bar', rot=0, figsize=(15,7), title=f\"Overall {k}\")\n",
     "        df_all_plt_overal.figure.savefig(temp_folder_img+f\"overall_stats_{k}.png\")\n",
     "\n",
     "\n",
@@ -72,28 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/sebastianneri/Documents/BDMA/ULB/INFO-H419 - Data warehouses/Projects/TPC-DI/TPCDI-Benchmark/result/overall_stats_Scale3_KNAF2D.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m create_mail_images()\n",
-      "Cell \u001b[0;32mIn[10], line 24\u001b[0m, in \u001b[0;36mcreate_mail_images\u001b[0;34m(data_sizes)\u001b[0m\n\u001b[1;32m     21\u001b[0m folder_base\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/result\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     22\u001b[0m temp_folder_img\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/images/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 24\u001b[0m df_all_overal \u001b[38;5;241m=\u001b[39m get_visualization_all(folder_base,data_sizes,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverall_stats\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m df_all_historical \u001b[38;5;241m=\u001b[39m get_visualization_all(folder_base,data_sizes,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhistorical_load\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     26\u001b[0m df_all_incremental \u001b[38;5;241m=\u001b[39m get_visualization_all(folder_base,data_sizes,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincremental_load\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[10], line 12\u001b[0m, in \u001b[0;36mget_visualization_all\u001b[0;34m(path_general, data_sizes, folder)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, data_size \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(data_sizes):\n\u001b[1;32m     11\u001b[0m     stats_path \u001b[38;5;241m=\u001b[39m path_general\u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{folder}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{size}\u001b[39;00m\u001b[38;5;124m_KNAF2D.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(folder\u001b[38;5;241m=\u001b[39mfolder, size\u001b[38;5;241m=\u001b[39mdata_size)\n\u001b[0;32m---> 12\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(stats_path)\n\u001b[1;32m     13\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscale\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m data_size\n\u001b[1;32m     14\u001b[0m     dfs\u001b[38;5;241m.\u001b[39mappend(df)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/tpc-di/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m   1014\u001b[0m     dialect,\n\u001b[1;32m   1015\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[1;32m   1023\u001b[0m )\n\u001b[1;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/tpc-di/lib/python3.12/site-packages/pandas/io/parsers/readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[0;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[1;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/tpc-di/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_engine(f, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/tpc-di/lib/python3.12/site-packages/pandas/io/parsers/readers.py:1880\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1878\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[1;32m   1879\u001b[0m         mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1880\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;241m=\u001b[39m get_handle(\n\u001b[1;32m   1881\u001b[0m     f,\n\u001b[1;32m   1882\u001b[0m     mode,\n\u001b[1;32m   1883\u001b[0m     encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1884\u001b[0m     compression\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompression\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1885\u001b[0m     memory_map\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmemory_map\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m),\n\u001b[1;32m   1886\u001b[0m     is_text\u001b[38;5;241m=\u001b[39mis_text,\n\u001b[1;32m   1887\u001b[0m     errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoding_errors\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstrict\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m   1888\u001b[0m     storage_options\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstorage_options\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m   1889\u001b[0m )\n\u001b[1;32m   1890\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1891\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/tpc-di/lib/python3.12/site-packages/pandas/io/common.py:873\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    868\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    869\u001b[0m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[1;32m    870\u001b[0m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[1;32m    871\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mencoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mmode:\n\u001b[1;32m    872\u001b[0m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[0;32m--> 873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[1;32m    874\u001b[0m             handle,\n\u001b[1;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[1;32m    876\u001b[0m             encoding\u001b[38;5;241m=\u001b[39mioargs\u001b[38;5;241m.\u001b[39mencoding,\n\u001b[1;32m    877\u001b[0m             errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[1;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    879\u001b[0m         )\n\u001b[1;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[1;32m    882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/sebastianneri/Documents/BDMA/ULB/INFO-H419 - Data warehouses/Projects/TPC-DI/TPCDI-Benchmark/result/overall_stats_Scale3_KNAF2D.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_mail_images()"
    ]
@@ -101,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tpc-di",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -115,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
